--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm
 
 [dependencies]
-rocket = "0.5.0-rc.1"
+# serde = { version = "1.0", features = ["derive"] }
+
+[dependencies.rocket]
+version = "0.5.0-rc.1"
+features = ["json"]
+
