--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 # serde = { version = "1.0", features = ["derive"] }
+aws-sdk-dynamodb = "0.8.0"
+aws-config = "0.8.0"
 
 [dependencies.rocket]
 version = "0.5.0-rc.1"
