create closure to handle parsing logic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 # serde = { version = "1.0", features = ["derive"] }
 aws-sdk-dynamodb = "0.8.0"
 aws-config = "0.8.0"
+tokio-stream = "0.1.8"
 
 [dependencies.rocket]
 version = "0.5.0-rc.1"
